[workspace]
members = ["seed-db-lib"]

[package]
name = "seed-db"
version = "0.1.0"
authors = ["Chengzhi Tan <tcz717@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed-db-lib = { path="seed-db-lib" }
tokio = { version="1.*", features=["full"] }
log = "0.*"
pretty_env_logger = "0.*"
